build: clean up Mill publish API usage and suppress JDK warning (#17)
* docs: add publish api cleanup plan

* build: migrate custom publish code off deprecated api

* docs: add mill jvm opts warning suppression plan

* build: suppress mill jdk unsafe warning

* build: share test JVM warning suppression

* build: scope test JVM warning suppression to forked workers